Service connection added, dashboard screen added.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
             <div class="mb-3">
                 <input formControlName="password" type="password" class="form-control" placeholder="Password" />
                 @if (loginStatus && password?.errors) {
-                    <div class="text-danger">Password Empty!</div>
+                    <div class="text-danger">Password Empity!</div>
                 }
             </div>
             <button class="btn btn-success">Send</button>
