Get to products in api service. Dashboard index page is created. Necessary codes added.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,56 @@
-<p>dashboard works!</p>
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Title</th>
+        <th scope="col">Category</th>
+        <th scope="col">Price</th>
+        <th scope="col">Image</th>
+        <th scope="col">Detail</th>
+      </tr>
+    </thead>
+    <tbody>
+    
+      @if (products.length > 0) {
+        @for (item of products; track $index) {
+            <tr (click)="singleSelectItem($index)" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <th scope="row">{{ item.id }}</th>
+                <td>{{ item.title }}</td>
+                <td>{{item.category}}</td>
+                <td>{{item.price}}</td>
+                <td>
+                    <img src={{item.thumbnail}} class="img-thumbnail" width="90" />
+                </td>
+                <td>
+                    <a href="" class="btn btn-outline-secondary">Detail</a>
+                </td>
+            </tr>
+        }
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">{{ singleProduct?.title }}</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    @if (singleProduct) {
+                        <img src={{singleProduct.images[0]}} class="img-fluid" />
+                        <h3><span class="badge text-bg-warning">{{ singleProduct.price }}</span></h3>
+                    }
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+            </div>
+        </div>
+
+    }
+
+
+      
+    </tbody>
+  </table>
