--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <table class="table table-hover">
     <thead>
       <tr>
@@ -38,8 +39,7 @@
                 <div class="modal-body">
                     @if (singleProduct) {
                         <img src={{singleProduct.images[0]}} class="img-fluid" />
-                        <h3><span class="badge text-bg-dark text-decoration-line-through">{{ singleProduct.price }}</span>&nbsp;<span class="badge text-bg-warning">{{ singleProduct.price }}</span></h3>
-                        <span class="badge text-bg-secondary">{{singleProduct.tags[0]}} / {{singleProduct.tags[1]}}</span>
+                        <h3><span class="badge text-bg-dark text-decoration-line-through">%{{ singleProduct.discountPercentage }}</span>&nbsp;<span class="badge text-bg-warning">{{ singleProduct.price }}</span></h3>
                     }
                 </div>
                 <div class="modal-footer">
