--- a/src/app/inc/header/header.component.html
+++ b/src/app/inc/header/header.component.html
@@ -1,3 +1,4 @@
+@if(user){
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -7,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a [routerLink]="[ '/dashboard' ]" class="nav-link active" aria-current="page" >Dashboard</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -24,7 +25,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link disabled" aria-disabled="true">{{user.firstName}} {{user.lastName}}</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -34,3 +35,4 @@
       </div>
     </div>
   </nav>
+}
